syntax = "proto3"; 

option go_package = "github.com/KhoshMaze/khoshmaze-backend/api/pb"; 

message UserSignUpRequest {
    string firstName = 1 [json_name = "firstName"]; 
    string lastName = 2 [json_name = "lastName"];
    string phone = 3 [json_name="phone"];
    string otp = 4 [json_name="otp"];
}

message OtpRequest {
    string phone = 1 [json_name="phone"];
}

message UserLoginRequest {
    string phone = 1 [json_name="phone"];
    string otp = 2 [json_name="otp"];
}

message UserTokenResponse {
    string accessToken = 1 [json_name="accessToken"]; 
    string refreshToken = 2 [json_name="refreshToken"]; 
    int64 refreshMaxAge = 3 [json_name = "refreshMaxAge"];
    int64 accessMaxAge = 4 [json_name ="accessMaxAge"]; 
}
